     the RootMenu can be opened from any other menu by pressing
     F1.

* Bug Fixes:

   - Sometimes a window jumped by half the screen's size when
     moving with the mouse and hitting the border of the desktop.
   - Fixed the "screen w" argument of the Move and other commands.
   - Clicking on a menu title did not close the menu by default.

-------------------------------------------------------------------

Changes in beta release 2.5.23 (1-Sep-2007)

* New features:

   - New Style command options:
       StartShaded

* Bug Fixes:

   - Fixed FvwmButton's button placement algorithm broken in
     2.5.22.

-------------------------------------------------------------------

Changes in beta release 2.5.22 (29-Aug-2007)

* New features:

   - New Style command options:
       UnderMousePlacementHonorsStartsOnPage
       UnderMousePlacementIgnoresStartsOnPage
       !MinOverlapPlacementPenalties
       !MinOverlapPercentPlacementPenalties
       MinWindowSize
   - SVG (scalable vector graphics) image loading support.
   - New extended variables
       $[w.iconfile.svgopts]
       $[w.miniiconfile.svgopts].
   - Added suffix 'w' to the arguments of the Move command and
     similar.  It is now possible to add multiple shifts to a
     window position, e.g. "50-50w 50-50w" for the center of the
     screen.
   - Removed UnderMousePlacement and CenterPlacement.  Use
     "PositionPlacement Center" and "PositionPlacement UnderMouse"
     instead.
   - Documentation in HTML format.
   - Replaced "UseListSkip" with "UseSkipList" & "OnlyListSkip" with
     "OnlySkipList" in WindowList command. (Old options deprecated.)
   - New subject ImageCache for PrintInfo command.
   - The new commad EchoFuncDefinition prints a function's
     definition to the console for debugging purposes.
   - The CursorStyle command can now load PNG and SVG images as
     mouse cursors.  New x and y arguments to specify the
     hot spot.  Also, it is now possible to load non-monochrome