@@ -31,6 +31,7 @@ Changes in beta release 2.5.24 (not released yet)
      moving with the mouse and hitting the border of the desktop.
    - Fixed the "screen w" argument of the Move and other commands.
    - Clicking on a menu title did not close the menu by default.
+   - Temporary files in FvwmPerl overwrote each other.
 
 -------------------------------------------------------------------
 
